--- a/index.html
+++ b/index.html
@@ -28,32 +28,33 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#" aria-current="page" class="home">HOME</a></li>
-                    <li><a href="./GAMES/1Royal.html">Royal</a></li>
-                    <li><a href="./GAMES/2Mark-II.html">Mark-II</a> </li>
-                    <li><a href="./GAMES/3Enugu.html">Enugu</a></li>
-                    <li><a href="./GAMES/4Lucky.html">Lucky</a></li>
-                    <li><a href="./GAMES/5Tota.html">Tota</a></li>
-                    <li><a href="./GAMES/6Diamond.html">Diamond</a></li>
-                    <li><a href="./GAMES/7People.html">People</a></li>
-                    <li><a href="./GAMES/8Bingo.html">Bingo</a></li>
-                    <li><a href="./GAMES/9Metro.html">Metro</a></li>
-                    <li><a href="./GAMES/10Inter.html">International</a></li>
-                    <li><a href="./GAMES/11Gold.html">Gold</a></li>
-                    <li><a href="./GAMES/12O6.html">06</a></li>
-                    <li><a href="./GAMES/13Jackpot.html">Jackpot</a></li>
-                    <li><a href="./GAMES/14Club-m.html">Club Master</a></li>
-                    <li><a href="./GAMES/15Super.html">Super</a></li>
-                    <li><a href="./GAMES/16Vag.html">Vag</a></li>
-                    <li><a href="./GAMES/17Fair-c.html">Fair Chance</a></li>
-                    <li><a href="./GAMES/18Aseda.html">Aseda</a></li>
-                    <li><a href="./GAMES/19MSP.html">MSP</a></li>
-                    <li><a href="./GAMES/20LUCKY-G.html">LUCKY G</a></li>
-                    <li><a href="./GAMES/21Midweek.html">Midweek</a> </li>
-                    <li><a href="./GAMES/22Fortune.html">Fortune</a></li>
-                    <li><a href="./GAMES/23Bonanza.html">Bonanza</a></li>
-                    <li><a href="./GAMES/24King.html"> Premier King</a></li>
-                    <li><a href="./GAMES/25National.html">National</a></li>
+                    <li><a href="#" aria-current="page" class="home">HOME</a></li>                   
+                    <li><a href="./GAMES/1Diamond.html">Diamond <sup>1</sup></a></li>
+                    <li><a href="./GAMES/2People.html">People <sup>2</sup></a></li>
+                    <li><a href="./GAMES/3Bingo.html">Bingo <sup>3</sup></a></li>
+                    <li><a href="./GAMES/4Metro.html">Metro <sup>4</sup></a></li>
+                    <li><a href="./GAMES/5Inter.html">International <sup>5</sup></a></li>
+                    <li><a href="./GAMES/6Gold.html">Gold <sup>6</sup></a></li>
+                    <li><a href="./GAMES/7O6.html">06 <sup>7</sup></a></li>
+                    <li><a href="./GAMES/8Jackpot.html">Jackpot <sup>8</sup></a></li>
+                    <li><a href="./GAMES/9Club-m.html">Club Master <sup>9</sup></a></li>
+                    <li><a href="./GAMES/10Super.html">Super <sup>10</sup></a></li>
+                    <li><a href="./GAMES/11Tota.html">Tota <sup>11</sup></a></li>
+                    <li><a href="./GAMES/12Mark-II.html">Mark-II <sup>12</sup></a> </li>
+                    <li><a href="./GAMES/13Vag.html">Vag <sup>13</sup></a></li>
+                    <li><a href="./GAMES/14Enugu.html">Enugu <sup>14</sup></a></li>
+                    <li><a href="./GAMES/15Lucky.html">Lucky <sup>15</sup></a></li>
+                    <li><a href="./GAMES/16Fair-c.html">Fair Chance <sup>16</sup></a></li>
+                    <li><a href="./GAMES/17Royal.html">Royal <sup>17</sup></a></li>
+                    <li><a href="./GAMES/18MSP.html">MSP <sup>18</sup></a></li>
+                    <li><a href="./GAMES/19LUCKY-G.html">LUCKY G <sup>19</sup></a></li>
+                    <li><a href="./GAMES/20Midweek.html">Midweek <sup>20</sup></a> </li>
+                    <li><a href="./GAMES/21Fortune.html">Fortune <sup>21</sup></a></li>
+                    <li><a href="./GAMES/22Bonanza.html">Bonanza <sup>22</sup></a></li>
+                    <li><a href="./GAMES/23King.html"> Premier King <sup>23</sup></a></li>
+                    <li><a href="./GAMES/24National.html">National <sup>24</sup></a></li>
+                    <li><a href="./GAMES/25Aseda.html">Aseda <sup>25</sup></a></li>
+
                     <!-- <li><a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a> -->
                 </ul>
 
@@ -81,79 +82,79 @@
             <section>
                 <div class="iframe-container" id="iframeContainer">
                     <div class="frame" id="frame" tabindex="0"> 
-                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Royal.html" tabindex="-1"></iframe>
+                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Diamond.html" tabindex="-1"></iframe>
                     </div> 
                     <div class="frame" tabindex="0"> 
-                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2Mark-II.html" tabindex="-1"></iframe>
+                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2People.html" tabindex="-1"></iframe>
                     </div> 
                     <div class="frame" tabindex="0"> 
-                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Enugu.html" tabindex="-1"></iframe>
+                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Bingo.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" tabindex="0"> 
-                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Lucky.html" tabindex="-1"></iframe>
+                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Metro.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Tota.html" tabindex="-1"></iframe>
+                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Inter.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Diamond.html" tabindex="-1"></iframe>
+                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Gold.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="People results board" scrolling="no" src="./GAMES/7People.html" tabindex="-1"></iframe>
+                        <iframe title="People results board" scrolling="no" src="./GAMES/7O6.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Bingo.html" tabindex="-1"></iframe>
+                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Jackpot.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Metro.html" tabindex="-1"></iframe>
+                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Club-m.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="International results board" scrolling="no" src="./GAMES/10Inter.html" tabindex="-1"></iframe>
+                        <iframe title="International results board" scrolling="no" src="./GAMES/10Super.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Gold.html" tabindex="-1"></iframe>
+                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Tota.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12O6.html" tabindex="-1"></iframe>
+                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12Mark-II.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Jackpot.html" tabindex="-1"></iframe>
+                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Vag.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Club-m.html" tabindex="-1"></iframe>
+                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Enugu.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Super.html" tabindex="-1"></iframe>
+                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Lucky.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Vag.html" tabindex="-1"></iframe>
+                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Fair-c.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Fair-c.html" tabindex="-1"></iframe>
+                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Royal.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Aseda results board" scrolling="no" src="./GAMES/18Aseda.html"></iframe>
+                        <iframe title="Aseda results board" scrolling="no" src="./GAMES/18MSP.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Monday Special results board" scrolling="no" src="./GAMES/19MSP.html"></iframe>
+                        <iframe title="Monday Special results board" scrolling="no" src="./GAMES/19LUCKY-G.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Ghana Lucky G results board" scrolling="no" src="./GAMES/20LUCKY-G.html"></iframe> 
+                        <iframe title="Ghana Lucky G results board" scrolling="no" src="./GAMES/20Midweek.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe title="Ghana Midweek results board" scrolling="no" src="./GAMES/21Midweek.html"></iframe>
+                        <iframe title="Ghana Midweek results board" scrolling="no" src="./GAMES/21Fortune.html"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Ghana Fortune results board" scrolling="no" src="./GAMES/22Fortune.html"></iframe>   
+                        <iframe title="Ghana Fortune results board" scrolling="no" src="./GAMES/22Bonanza.html"></iframe>   
                     </div>
                     <div class="frame">
-                        <iframe title="friday Bonanza results board" scrolling="no" src="./GAMES/23Bonanza.html"></iframe> 
+                        <iframe title="friday Bonanza results board" scrolling="no" src="./GAMES/23King.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe title="premier King results board" scrolling="no" src="./GAMES/24King.html"></iframe> 
+                        <iframe title="premier King results board" scrolling="no" src="./GAMES/24National.html"></iframe> 
                     </div>
                     <div class="frame">
-                        <iframe title="Ghana National results board" scrolling="no" src="./GAMES/25National.html"></iframe> 
+                        <iframe title="Ghana National results board" scrolling="no" src="./GAMES/25Aseda.html"></iframe> 
                     </div>
                 </div>
             </section>
@@ -185,7 +186,7 @@
                         <!-- footer-->
         <footer>
             <p>Created & Manage <br> By <br> Hologuti Business Centre</p>
-            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true" class="apex-domain"></a>
+            <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" width="100px" aria-hidden="true"></a>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
             <div class="contentInfo-wrapper">
                 <a href="#" class="team">Team</a>
