--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">monday 05/02/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">30 - 46 - 5 - 74 - 89</p>
+                <p class="machine">87 - 4 - 7 - 33 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">41 - 8 - 4 - 86 - 29</p>
+                <p class="machine">84 - 6 - 72 - 90 - 24</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">51 - 14 - 29 - 54 - 50</p>
+                <p class="machine">72 83 - 49 - 43 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">74 - 39 - 28 - 17 - 65</p>
+                <p class="machine">32 - 11 - 78 - 52 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">56 - 26 - 71 - 60 - 12</p>
+                <p class="machine">38 - 18 - 47 - 21 - 59</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">30 - 10 - 76 - 82 - 24</p>
+                <p class="machine">84 - 29 - 77 - 20 - 88</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">sunday 04/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -209,41 +244,6 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">55 - 9 - 21 - 46 - 41</p>
                 <p class="machine">5 - 81 - 72 - 86 - 33</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">saturday 03/02/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">83 - 67 - 3 - 26 - 20</p>
-                <p class="machine">58 - 80 - 90 - 60 - 46</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">60 - 18 - 69 - 28 - 81</p>
-                <p class="machine">48 - 50 - 77 - 56 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">83 - 3 - 45 - 1 - 41</p>
-                <p class="machine">22 - 55 - 42 - 72 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">22 - 13 - 64 - 15 - 52</p>
-                <p class="machine">28 - 67 - 35 - 8 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">17 - 73 - 43 - 71 - 25</p>
-                <p class="machine">14 - 47 - 44 - 45 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">87 - 85 - 14 - 68 - 44</p>
-                <p class="machine">39 - 66 - 43 - 23 - 59</p>        
             </article>
         </section>
 
