--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">tuesday 06/02/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">56 - 90 - 36 - 57 - 32</p>
+                <p class="machine">23 - 86 - 31 - 28 - 54</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">13 - 72 - 90 - 73 - 4</p>
+                <p class="machine">50 - 79 - 30 - 36 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">11 - 70 - 42 - 10 - 57</p>
+                <p class="machine">35 - 49 - 33 - 90 - 74</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">6 - 71 - 10 - 50 - 47</p>
+                <p class="machine">18 - 9 - 59 - 58 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY G</h3>
+                <p class="winning">31 - 61 - 33 - 29 - 16</p>
+                <p class="machine">75 - 22 - 59 - 4 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">15 - 50 - 9 - 16 - 88</p>
+                <p class="machine">25 - 27 - 19 - 40 - 67</p>        
+            </article>
+        </section>
+
+        
+        <section aria-label="two days ago result">
             <h2 class="date">monday 05/02/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -212,40 +247,6 @@
             </article>
         </section>
 
-
-        <section aria-label="two days ago result">
-            <h2 class="date">sunday 04/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">18 - 80 - 69 - 72 - 81</p>
-                <p class="machine">41 - 42 - 5 - 76 - 63</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">86 - 27 - 70 - 22 - 24</p>
-                <p class="machine">50 - 3 - 58 - 18 - 5</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">65 - 21 - 44 - 37 - 79</p>
-                <p class="machine">80 - 46 - 82 - 77 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">60 - 10 - 29 - 42 - 21</p>
-                <p class="machine">83 - 49 - 15 - 19 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">20 - 84 - 42 - 29 - 76</p>
-                <p class="machine">35 - 60 - 23 - 66 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">55 - 9 - 21 - 46 - 41</p>
-                <p class="machine">5 - 81 - 72 - 86 - 33</p>        
-            </article>
-        </section>
 
     </div>
     
