--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@
                 </div>
                 <div class="stayConnected">
                     <span class="span connected">Stay connected</span>
-                    <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
+                    <div class="icon-wrapper">
+                        <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
                     <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
+                    </div> 
                 </div>
             </div>
         </footer>
