--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -179,6 +179,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">wednesday 07/02/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">62 - 44 - 76 - 22 - 58</p>
+                <p class="machine">45 - 66 - 82 - 30 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">16 - 32 - 19 - 71 - 56</p>
+                <p class="machine">51 - 34 - 74 - 24 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">22 - 5 - 77 - 73 - 54</p>
+                <p class="machine">55 - 23 - 7 - 32 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">32 - 2 - 13 - 8 - 34</p>
+                <p class="machine">10 - 90 - 76 - 48 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">36 - 71 - 65 - 67 - 4</p>
+                <p class="machine">57 - 76 - 83 - 85 - 44</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">61 - 14 - 11 - 37 - 4</p>
+                <p class="machine">89 - 26 - 69 - 45 - 50</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">tuesday 06/02/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -211,42 +245,6 @@
                 <p class="machine">25 - 27 - 19 - 40 - 67</p>        
             </article>
         </section>
-
-        
-        <section aria-label="two days ago result">
-            <h2 class="date">monday 05/02/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">30 - 46 - 5 - 74 - 89</p>
-                <p class="machine">87 - 4 - 7 - 33 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">41 - 8 - 4 - 86 - 29</p>
-                <p class="machine">84 - 6 - 72 - 90 - 24</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">51 - 14 - 29 - 54 - 50</p>
-                <p class="machine">72 83 - 49 - 43 - 90</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">74 - 39 - 28 - 17 - 65</p>
-                <p class="machine">32 - 11 - 78 - 52 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">56 - 26 - 71 - 60 - 12</p>
-                <p class="machine">38 - 18 - 47 - 21 - 59</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">30 - 10 - 76 - 82 - 24</p>
-                <p class="machine">84 - 29 - 77 - 20 - 88</p>        
-            </article>
-        </section>
-
 
     </div>
     
