--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Result | Baba Ijebu</title>
 
+    <!-- <meta property="og:title" content="Visual Lotto Board">
+    <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT"> -->
+    <meta property="og:image" content="https://i.postimg.cc/bvtgv7Yb/vlb-day-Result-cover.png">
+    <meta property="og:image:alt" content="premier lotto winning and machine result">
+    <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
+
     <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/GAMES/dailyResult">
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
@@ -179,6 +185,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">thursday 08/02/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">32 - 80 - 40 - 30 - 73</p>
+                <p class="machine">79 - 41 - 39 - 13 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">fair Chance</h3>
+                <p class="winning">30 - 48 - 73 - 24 - 29</p>
+                <p class="machine">80 - 85 - 36 - 13 - 78</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">53 - 49 - 17 - 9 - 71</p>
+                <p class="machine">61 - 77 - 33 - 5 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">84 - 78 - 32 - 45 - 54</p>
+                <p class="machine">22 - 11 - 76 - 49 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">20 - 58 - 60 - 67 - 8</p>
+                <p class="machine">90 - 87 - 75 - 55 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">24 - 44 - 51 - 25 - 59</p>
+                <p class="machine">46 - 72 - 17 - 73 - 66</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">wednesday 07/02/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -209,40 +250,6 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">61 - 14 - 11 - 37 - 4</p>
                 <p class="machine">89 - 26 - 69 - 45 - 50</p>        
-            </article>
-        </section>
-
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 06/02/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">56 - 90 - 36 - 57 - 32</p>
-                <p class="machine">23 - 86 - 31 - 28 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">13 - 72 - 90 - 73 - 4</p>
-                <p class="machine">50 - 79 - 30 - 36 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">11 - 70 - 42 - 10 - 57</p>
-                <p class="machine">35 - 49 - 33 - 90 - 74</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">6 - 71 - 10 - 50 - 47</p>
-                <p class="machine">18 - 9 - 59 - 58 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY G</h3>
-                <p class="winning">31 - 61 - 33 - 29 - 16</p>
-                <p class="machine">75 - 22 - 59 - 4 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">15 - 50 - 9 - 16 - 88</p>
-                <p class="machine">25 - 27 - 19 - 40 - 67</p>        
             </article>
         </section>
 
