--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="Visual Lotto Board">
         <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
         <meta property="og:image" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
-        <meta property="og:imahe:alt" content="">
+        <meta property="og:image:alt" content="">
         <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/">
 
         <link rel="icon" href="favicon.ico" type="image/x-icon">
