Added vag result

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -212,9 +212,9 @@
                 <p class="machine">67 - 54 - 44 - 13 - 72</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">8 - 1 - 35 - 28 - 51</p>
+                <p class="machine">31 - 76 - 59 - 21 - 68</p>        
             </article>
         </section>
 
