--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,6 +185,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">saturday 10/02/204</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">90 - 54 - 38 - 68 - 44</p>
+                <p class="machine">62 - 24 - 18 - 33 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">27 - 41 - 86 - 63 - 50</p>
+                <p class="machine">45 - 81 - 82 - 70 - 88</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">35 - 52 - 3 - 29 - 62</p>
+                <p class="machine">87 - 51 - 38 - 55 - 10</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">64 - 4 - 22 - 85 - 84</p>
+                <p class="machine">60 - 20 - 35 - 31 - 11</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">22 - 16 - 54 - 24 - 10</p>
+                <p class="machine">12 - 53 - 67 - 57 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">47 - 22 - 73 - 66 - 50</p>
+                <p class="machine">18 - 76 - 71 - 20 - 32</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">friday 9/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -217,44 +252,6 @@
                 <p class="machine">31 - 76 - 59 - 21 - 68</p>        
             </article>
         </section>
-
-        <section aria-label="two days ago result">
-            <h2 class="date">thursday 08/02/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">32 - 80 - 40 - 30 - 73</p>
-                <p class="machine">79 - 41 - 39 - 13 - 22</p>        
-            </article>
-            <article>
-                <h3 class="game">fair Chance</h3>
-                <p class="winning">30 - 48 - 73 - 24 - 29</p>
-                <p class="machine">80 - 85 - 36 - 13 - 78</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">53 - 49 - 17 - 9 - 71</p>
-                <p class="machine">61 - 77 - 33 - 5 - 7</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">84 - 78 - 32 - 45 - 54</p>
-                <p class="machine">22 - 11 - 76 - 49 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">20 - 58 - 60 - 67 - 8</p>
-                <p class="machine">90 - 87 - 75 - 55 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">24 - 44 - 51 - 25 - 59</p>
-                <p class="machine">46 - 72 - 17 - 73 - 66</p>        
-            </article>
-        </section>
-
-
-          
-
     </div>
     
     <div class="gameList">
