--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,6 +185,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">sunday 11/02/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">46 - 7 - 27 - 2 - 84</p>
+                <p class="machine">89 - 81 - 69 - 79 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">22 - 2 - 20 - 40 - 61</p>
+                <p class="machine">73 - 84 - 75 - 36 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">58 - 55 - 39 - 78 - 36</p>
+                <p class="machine">70 - 69 - 63 - 38 - 52</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">38 - 75 - 44 - 7 - 48</p>
+                <p class="machine">64 - 57 - 43 - 17 - 30</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">55 - 5 - 62 - 73 - 17</p>
+                <p class="machine">77 - 54 - 34 - 25 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">23 - 15 - 47 - 72 - 3</p>
+                <p class="machine">53 - 74 - 68 - 52 - 81</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">saturday 10/02/204</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -215,41 +249,6 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">47 - 22 - 73 - 66 - 50</p>
                 <p class="machine">18 - 76 - 71 - 20 - 32</p>        
-            </article>
-        </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">friday 9/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">71 - 87 - 12 - 86 - 60</p>
-                <p class="machine">14 - 16 - 45 - 82 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">48 - 53 - 68 - 9 - 50</p>
-                <p class="machine">18 - 1 - 76 - 59 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">39 - 71 - 63 - 18 - 57</p>
-                <p class="machine">12 - 8 - 65 - 9 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">66 - 35 - 10 - 43 - 64</p>
-                <p class="machine">23 - 15 - 20 - 50 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">61 - 28 - 7 - 19 - 82</p>
-                <p class="machine">67 - 54 - 44 - 13 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">8 - 1 - 35 - 28 - 51</p>
-                <p class="machine">31 - 76 - 59 - 21 - 68</p>        
             </article>
         </section>
     </div>
