--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,6 +185,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">monday 12/02/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">62 - 54 - 55 - 59 - 49</p>
+                <p class="machine">25 - 82 - 22 - 44 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">14 - 45 - 11 - 38 - 90</p>
+                <p class="machine">74 - 47 - 2 - 31 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">22 - 63 - 34 - 75 - 87</p>
+                <p class="machine">45 - 7 - 12 - 18 - 9</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">27 - 75 - 66 - 72 - 77</p>
+                <p class="machine">85 - 48 - 12 - 81 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">13 - 74 - 7 - 32 - 77</p>
+                <p class="machine">3 - 82 - 1 - 38 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">6 - 16 - 46 - 39 - 55</p>
+                <p class="machine">60 - 2 - 19 - 34 - 89</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">sunday 11/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -218,39 +253,6 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">saturday 10/02/204</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">90 - 54 - 38 - 68 - 44</p>
-                <p class="machine">62 - 24 - 18 - 33 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">27 - 41 - 86 - 63 - 50</p>
-                <p class="machine">45 - 81 - 82 - 70 - 88</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">35 - 52 - 3 - 29 - 62</p>
-                <p class="machine">87 - 51 - 38 - 55 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">64 - 4 - 22 - 85 - 84</p>
-                <p class="machine">60 - 20 - 35 - 31 - 11</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">22 - 16 - 54 - 24 - 10</p>
-                <p class="machine">12 - 53 - 67 - 57 - 4</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">47 - 22 - 73 - 66 - 50</p>
-                <p class="machine">18 - 76 - 71 - 20 - 32</p>        
-            </article>
-        </section>
     </div>
     
     <div class="gameList">
