--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -185,6 +185,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">tuesday 13/02/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">61 - 78 - 90 - 89 - 25</p>
+                <p class="machine">75 - 29 - 74 - 71 - 50</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">90 - 11 - 76 - 74 - 9</p>
+                <p class="machine">47 - 16 - 83 - 85 - 41</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">59 - 8 - 85 - 53 - 25</p>
+                <p class="machine">62 - 35 - 64 - 42 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">club Master</h3>
+                <p class="winning">68 - 88 - 9 - 61 - 67</p>
+                <p class="machine">49 - 47 - 46 - 24 - 84</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">26 - 55 - 25 - 49 - 28</p>
+                <p class="machine">1 - 9 - 32 - 48 - 15</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">53 - 21 - 15 - 27 - 12</p>
+                <p class="machine">35 - 86 - 26 - 36 - 82</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">monday 12/02/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -217,42 +251,6 @@
                 <p class="machine">60 - 2 - 19 - 34 - 89</p>        
             </article>
         </section>
-
-
-        <section aria-label="two days ago result">
-            <h2 class="date">sunday 11/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">46 - 7 - 27 - 2 - 84</p>
-                <p class="machine">89 - 81 - 69 - 79 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">22 - 2 - 20 - 40 - 61</p>
-                <p class="machine">73 - 84 - 75 - 36 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">58 - 55 - 39 - 78 - 36</p>
-                <p class="machine">70 - 69 - 63 - 38 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">38 - 75 - 44 - 7 - 48</p>
-                <p class="machine">64 - 57 - 43 - 17 - 30</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">55 - 5 - 62 - 73 - 17</p>
-                <p class="machine">77 - 54 - 34 - 25 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">23 - 15 - 47 - 72 - 3</p>
-                <p class="machine">53 - 74 - 68 - 52 - 81</p>        
-            </article>
-        </section>
-
     </div>
     
     <div class="gameList">
