--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
-        <meta name="description" content="Visual Lotto Board is a webpage for Past and Up-to-date Premier lotto, Baba Ijebu and Ghana games results">
+        <meta name="description" content="Visual Lotto Board is a platform that provides information related to Premier Lotto (Baba Ijebu) and Ghana lottery results. You can find past and current results on your devices through this service">
 
         <meta property="og:title" content="Visual Lotto Board">
         <meta property="og:description" content="Digital board for Premier Lotto Baba Ijebu and Ghana RESULT">
