--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -184,7 +184,7 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="yesterday result">
+        <section aria-label="two days ago result">
             <h2 class="date">tuesday 13/02/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -218,39 +218,40 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">monday 12/02/2024</h2>
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 14/02/2024</h2>
             <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">62 - 54 - 55 - 59 - 49</p>
-                <p class="machine">25 - 82 - 22 - 44 - 17</p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">31 - 54 - 1 - 63 - 9</p>
+                <p class="machine">12 - 36 - 46 - 83 - 66</p>        
             </article>
             <article>
-                <h3 class="game">People</h3>
-                <p class="winning">14 - 45 - 11 - 38 - 90</p>
-                <p class="machine">74 - 47 - 2 - 31 - 86</p>        
+                <h3 class="game">mark ii</h3>
+                <p class="winning">44 - 3 - 11 - 10 - 31</p>
+                <p class="machine">43 - 62 - 50 - 89 - 8</p>        
             </article>
             <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">22 - 63 - 34 - 75 - 87</p>
-                <p class="machine">45 - 7 - 12 - 18 - 9</p>        
+                <h3 class="game">vag</h3>
+                <p class="winning">7 - 32 - 10 - 69 - 39</p>
+                <p class="machine">41 - 29 - 40 - 85 - 16</p>        
             </article>
             <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">27 - 75 - 66 - 72 - 77</p>
-                <p class="machine">85 - 48 - 12 - 81 - 50</p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">80 - 28 - 84 - 29 - 77</p>
+                <p class="machine">76 - 64 - 23 - 73 - 16</p>        
             </article>
             <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">13 - 74 - 7 - 32 - 77</p>
-                <p class="machine">3 - 82 - 1 - 38 - 33</p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">89 - 33 - 86 - 46 - 34</p>
+                <p class="machine">36 - 53 - 7 - 61 - 73</p>        
             </article>
             <article>
-                <h3 class="game">International</h3>
-                <p class="winning">6 - 16 - 46 - 39 - 55</p>
-                <p class="machine">60 - 2 - 19 - 34 - 89</p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">64 - 44 - 67 - 78 - 48</p>
+                <p class="machine">12 - 28 - 30 - 75 - 46</p>        
             </article>
         </section>
+        
     </div>
     
     <div class="gameList">
