--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -184,41 +184,8 @@
         </nav>
     </header>
     <div class="gameResults">
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 13/02/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">61 - 78 - 90 - 89 - 25</p>
-                <p class="machine">75 - 29 - 74 - 71 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">90 - 11 - 76 - 74 - 9</p>
-                <p class="machine">47 - 16 - 83 - 85 - 41</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">59 - 8 - 85 - 53 - 25</p>
-                <p class="machine">62 - 35 - 64 - 42 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">club Master</h3>
-                <p class="winning">68 - 88 - 9 - 61 - 67</p>
-                <p class="machine">49 - 47 - 46 - 24 - 84</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">26 - 55 - 25 - 49 - 28</p>
-                <p class="machine">1 - 9 - 32 - 48 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">53 - 21 - 15 - 27 - 12</p>
-                <p class="machine">35 - 86 - 26 - 36 - 82</p>        
-            </article>
-        </section>
 
-        <section aria-label="yesterday result">
+        <section aria-label="two days ago result">
             <h2 class="date">wednesday 14/02/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -249,6 +216,40 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">64 - 44 - 67 - 78 - 48</p>
                 <p class="machine">12 - 28 - 30 - 75 - 46</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">thursday 15/02/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">60 - 66 - 31 - 48 - 65</p>
+                <p class="machine">81 - 51 - 39 - 54 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">51 - 10 - 64 - 85 - 71</p>
+                <p class="machine">11 - 78 - 49 - 69 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">46 - 2 - 54 - 30 - 10</p>
+                <p class="machine">61 - 63 - 1 - 65 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">47 - 41 - 45 - 26 - 80</p>
+                <p class="machine">77 - 25 - 90 - 67 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">2 - 89 - 30 - 17 - 56</p>
+                <p class="machine">15 - 31 - 20 - 18 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">23 - 43 - 7 - 31 - 33</p>
+                <p class="machine">21 - 82 - 18 - 61 - 88</p>        
             </article>
         </section>
         
