--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">wednesday 14/02/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">31 - 54 - 1 - 63 - 9</p>
-                <p class="machine">12 - 36 - 46 - 83 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">44 - 3 - 11 - 10 - 31</p>
-                <p class="machine">43 - 62 - 50 - 89 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">7 - 32 - 10 - 69 - 39</p>
-                <p class="machine">41 - 29 - 40 - 85 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">80 - 28 - 84 - 29 - 77</p>
-                <p class="machine">76 - 64 - 23 - 73 - 16</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">89 - 33 - 86 - 46 - 34</p>
-                <p class="machine">36 - 53 - 7 - 61 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">64 - 44 - 67 - 78 - 48</p>
-                <p class="machine">12 - 28 - 30 - 75 - 46</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">thursday 15/02/2024</h2>
             <article>
                 <h3 class="game">People</h3>
@@ -252,7 +218,40 @@
                 <p class="machine">21 - 82 - 18 - 61 - 88</p>        
             </article>
         </section>
-        
+
+        <section aria-label="yesterday result">
+            <h2 class="date">friday 16/02/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">71 - 2 - 86 - 22 - 65</p>
+                <p class="machine">50 - 26 - 12 - 46 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">77 - 35 - 32 - 46 - 27</p>
+                <p class="machine">47 - 3 - 29 - 62 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">21 - 50 - 2 - 20 - 1</p>
+                <p class="machine">24 - 25 - 49 - 72 - 62</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">32 - 85 - 87 - 27 - 22</p>
+                <p class="machine">34 - 7 - 16 - 9 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">88 - 90 - 16 - 57 - 20</p>
+                <p class="machine">23 - 32 - 87 - 53 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">61 - 76 - 57 - 58 - 44</p>
+                <p class="machine">75 - 79 - 33 - 8 - 90</p>        
+            </article>
+        </section>
     </div>
     
     <div class="gameList">
