--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">thursday 15/02/2024</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">60 - 66 - 31 - 48 - 65</p>
-                <p class="machine">81 - 51 - 39 - 54 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">51 - 10 - 64 - 85 - 71</p>
-                <p class="machine">11 - 78 - 49 - 69 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">46 - 2 - 54 - 30 - 10</p>
-                <p class="machine">61 - 63 - 1 - 65 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">47 - 41 - 45 - 26 - 80</p>
-                <p class="machine">77 - 25 - 90 - 67 - 68</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">2 - 89 - 30 - 17 - 56</p>
-                <p class="machine">15 - 31 - 20 - 18 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">23 - 43 - 7 - 31 - 33</p>
-                <p class="machine">21 - 82 - 18 - 61 - 88</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">friday 16/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">vag</h3>
                 <p class="winning">61 - 76 - 57 - 58 - 44</p>
                 <p class="machine">75 - 79 - 33 - 8 - 90</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 17/02/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">54 - 49 - 48 - 45 - 52</p>
+                <p class="machine">10 - 82 - 85 - 29 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">78 - 51 - 87 - 56 - 31</p>
+                <p class="machine">57 - 43 - 36 - 79 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">1 - 34 - 69 - 37 - 22</p>
+                <p class="machine">90 - 49 - 9 - 75 - 71</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">36 - 46 - 29 - 11 - 12</p>
+                <p class="machine">21 - 33 - 52 - 45 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">87 - 24 - 2 - 48 - 16</p>
+                <p class="machine">67 - 55 - 49 - 68 - 69</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">73 - 64 - 56 - 3 - 32</p>
+                <p class="machine">47 - 75 - 16 - 67 - 70</p>        
             </article>
         </section>
     </div>
