--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">friday 16/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">71 - 2 - 86 - 22 - 65</p>
-                <p class="machine">50 - 26 - 12 - 46 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">77 - 35 - 32 - 46 - 27</p>
-                <p class="machine">47 - 3 - 29 - 62 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">21 - 50 - 2 - 20 - 1</p>
-                <p class="machine">24 - 25 - 49 - 72 - 62</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">32 - 85 - 87 - 27 - 22</p>
-                <p class="machine">34 - 7 - 16 - 9 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">88 - 90 - 16 - 57 - 20</p>
-                <p class="machine">23 - 32 - 87 - 53 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">61 - 76 - 57 - 58 - 44</p>
-                <p class="machine">75 - 79 - 33 - 8 - 90</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">saturday 17/02/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">Fair Chance</h3>
                 <p class="winning">73 - 64 - 56 - 3 - 32</p>
                 <p class="machine">47 - 75 - 16 - 67 - 70</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">sunday 18/02/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">43 - 24 - 28 - 62 - 50</p>
+                <p class="machine">75 - 59 - 87 - 20 - 27</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">73 - 29 - 37 - 84 - 70</p>
+                <p class="machine">90 - 23 - 35 - 20 - 28</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">84 - 19 - 49 - 14 - 41</p>
+                <p class="machine">26 - 61 - 7 - 39 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">Aseda</h3>
+                <p class="winning">44 - 47 - 31 - 3 - 5</p>
+                <p class="machine">73 - 78 - 64 - 58 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">43 - 67 - 68 - 37 - 90</p>
+                <p class="machine">58 - 61 - 70 - 55 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">57 - 86 - 50 - 52 - 58</p>
+                <p class="machine">61 - 70 - 39 - 49 - 89</p>        
             </article>
         </section>
     </div>
