--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 17/02/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">54 - 49 - 48 - 45 - 52</p>
-                <p class="machine">10 - 82 - 85 - 29 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">78 - 51 - 87 - 56 - 31</p>
-                <p class="machine">57 - 43 - 36 - 79 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">1 - 34 - 69 - 37 - 22</p>
-                <p class="machine">90 - 49 - 9 - 75 - 71</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">36 - 46 - 29 - 11 - 12</p>
-                <p class="machine">21 - 33 - 52 - 45 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">87 - 24 - 2 - 48 - 16</p>
-                <p class="machine">67 - 55 - 49 - 68 - 69</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">73 - 64 - 56 - 3 - 32</p>
-                <p class="machine">47 - 75 - 16 - 67 - 70</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 18/02/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">57 - 86 - 50 - 52 - 58</p>
                 <p class="machine">61 - 70 - 39 - 49 - 89</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 19/02/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">37 - 74 - 72 - 60 - 20</p>
+                <p class="machine">83 - 59 - 67 - 78 - 70</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">67 - 66 - 3 - 49 - 21</p>
+                <p class="machine">23 - 9 - 37 - 13 - 33</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">88 - 53 - 17 - 49 - 55</p>
+                <p class="machine">9 - 34 - 35 - 82 - 76</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">80 - 1 - 90 - 66 - 67</p>
+                <p class="machine">59 - 77 - 86 - 58 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">74 - 46 - 42 - 65 - 71</p>
+                <p class="machine">82 - 86 - 36 - 62 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">54 - 71 - 58 - 17 - 14</p>
+                <p class="machine">45 - 76 - 49 - 47 - 18</p>        
             </article>
         </section>
     </div>
