--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 18/02/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">43 - 24 - 28 - 62 - 50</p>
-                <p class="machine">75 - 59 - 87 - 20 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">73 - 29 - 37 - 84 - 70</p>
-                <p class="machine">90 - 23 - 35 - 20 - 28</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">84 - 19 - 49 - 14 - 41</p>
-                <p class="machine">26 - 61 - 7 - 39 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">44 - 47 - 31 - 3 - 5</p>
-                <p class="machine">73 - 78 - 64 - 58 - 36</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">43 - 67 - 68 - 37 - 90</p>
-                <p class="machine">58 - 61 - 70 - 55 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">57 - 86 - 50 - 52 - 58</p>
-                <p class="machine">61 - 70 - 39 - 49 - 89</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 19/02/2024</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">54 - 71 - 58 - 17 - 14</p>
                 <p class="machine">45 - 76 - 49 - 47 - 18</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">tuesday 20/02/2024</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">6 - 29 - 88 - 52 - 61</p>
+                <p class="machine">63 - 76 - 45 - 73 - 36</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">52 - 41 - 6 - 78 - 7</p>
+                <p class="machine">10 - 67 - 79 - 72 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">15 - 34 - 30 - 49 - 28</p>
+                <p class="machine">58 - 59 - 7 - 81 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">26 - 6 - 17 - 33 - 3</p>
+                <p class="machine">78 - 15 - 63 - 54 - 46</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">15 - 61 - 17 - 85 - 32</p>
+                <p class="machine">51 - 64 - 82 - 26 - 40</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">32 - 51 - 52 - 47 - 44</p>
+                <p class="machine">10 - 86 - 84 - 29 - 83</p>        
             </article>
         </section>
     </div>
