--- a/plan.html
+++ b/plan.html
@@ -47,7 +47,7 @@
 
         }
 
-        header {
+        /* header {
             position: sticky;
             top: 0;
             display: flex;
@@ -59,8 +59,8 @@
             background-color: #800080;
             margin: 0;
             padding: 0;
-        }
-        header nav {
+        } */
+        /* header nav {
             width: 20%;
             padding: 20px;
             text-align: center;
@@ -68,11 +68,11 @@
             background-color: #fff;
             border-radius: 2.5px;
             font-size: 25px;
-        }
-        header iframe {
+        } */
+        /* header iframe {
             background-color: whitesmoke;
             margin-bottom: 10px;
-        }
+        } */
 
         h1 {
             font-size: 4rem;
@@ -241,21 +241,21 @@
         <nav>
             <a href="/" class="home">Home</a>
         </nav>
-        <div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+        <!-- <div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <h2 style="color: #fff;">Tota board</h2>
             <iframe title="Tota past results" src="https://vlb.hologutibusinesscentre.com/GAMES/11Tota.html" width="60%"></iframe>
-        </div>
+        </div> -->
     </header>
     <main>
-        <!-- <h1>Please Check Back Some Few Time</h1>
+        <h1>Please Check Back Some Few Time</h1>
         <h2>All Plans have been closed</h2>
-        <h2>Nothing To Show Now</h2> -->
+        <h2>Nothing To Show Now</h2> 
 
 
-        <h2>Welcome to Plan Page</h2>
-        <small>Click the image to go to the main board</small>
+        <!-- <h2>Welcome to Plan Page</h2>
+        <small>Click the image to go to the main board</small> -->
 
-        <section id="current">
+        <!-- <section id="current">
             <h2></h2>
             <article>
                 <h2>from-DIAMOND-to-TOTA</h2>
@@ -284,7 +284,7 @@
 
             <p>Let's have it. Drop it on any of the social media post down below</p>
     
-        </section> 
+        </section>  -->
 
         <hr>
 
