--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -186,40 +186,6 @@
     <div class="gameResults">
 
         <section aria-label="two days ago result">
-            <h2 class="date">monday 19/02/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">37 - 74 - 72 - 60 - 20</p>
-                <p class="machine">83 - 59 - 67 - 78 - 70</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">67 - 66 - 3 - 49 - 21</p>
-                <p class="machine">23 - 9 - 37 - 13 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">88 - 53 - 17 - 49 - 55</p>
-                <p class="machine">9 - 34 - 35 - 82 - 76</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">80 - 1 - 90 - 66 - 67</p>
-                <p class="machine">59 - 77 - 86 - 58 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">74 - 46 - 42 - 65 - 71</p>
-                <p class="machine">82 - 86 - 36 - 62 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">54 - 71 - 58 - 17 - 14</p>
-                <p class="machine">45 - 76 - 49 - 47 - 18</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">tuesday 20/02/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -250,6 +216,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">32 - 51 - 52 - 47 - 44</p>
                 <p class="machine">10 - 86 - 84 - 29 - 83</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 21/02/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">35 - 20 - 83 - 24 - 79</p>
+                <p class="machine">9 - 39 - 76 - 8 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">7 - 80 - 84 - 10 - 62</p>
+                <p class="machine">44 - 53 - 83 - 41 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">1 - 50 - 75 - 83 - 52</p>
+                <p class="machine">39 - 87 - 68 - 5 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">76 - 3 - 38 - 87 - 79</p>
+                <p class="machine">4 - 57 - 1 - 43 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">10 - 1 - 73 - 31 - 7</p>
+                <p class="machine">88 - 90 - 83 - 25 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">53 - 17 - 77 - 2 - 80</p>
+                <p class="machine">4 - 9 - 66 - 34 - 1</p>        
             </article>
         </section>
     </div>
